# ngs-ieee-oui-db

./: README.md  __init__.py  __main__.py  cli.py  extractIotManufacturers.py  isIoT.py  pyproject.toml  utils.py
NG_OUI_DB/: IEE_OUI.py  __init__.py  cli.py  extractIotManufacturers.py  isIoT.py  utils.py  validators.py
docs/: IEE_OUI.MD  cli.MD  extractIot.MD  isIot.MD  utils.MD  validators.MD
tests/: test_IeeOuiDb.py  test_extractIoTMans.py  test_isIoT.py  test_validators.py
